@@ -1,3 +1,9 @@
+2006-12-27  Ian Lance Taylor  <iant@google.com>
+
+	PR debug/26964
+	* dwarf2out.c (gen_type_die): Don't write out a DIE for
+	ENUMERAL_TYPE if it was already written out.
+
 2006-12-23  Eric Botcazou  <ebotcazou@adacore.com>
 
 	* dwarf2out.c (dbx_reg_number): Do leaf register remapping
